--- a/src/components/CatergorySlider/categoryslider.scss
+++ b/src/components/CatergorySlider/categoryslider.scss
@@ -20,6 +20,7 @@
   }
   & .categoryCard {
     max-width: 320px;
+    padding: 10px 0;
     display: inline-flex !important;
     flex-direction: column;
     align-items: center;
