--- a/src/components/HomePageComp/HomeAskQuest/homequestion.scss
+++ b/src/components/HomePageComp/HomeAskQuest/homequestion.scss
@@ -9,17 +9,17 @@
     margin-inline: auto;
     position: relative;
   }
-  & .bacshadow {
-    width: 450px;
-    height: 450px;
-    border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: radial-gradient(#f75c0311, transparent);
-    position: absolute;
-    z-index: -1;
-    box-shadow: 0px 0px 100px 260px #f75c0306;
-    filter: drop-shadow(0px 0px 140px #f75c03);
-  }
+  // & .bacshadow {
+  //   width: 450px;
+  //   height: 450px;
+  //   border-radius: 50%;
+  //   top: 50%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+  //   background: radial-gradient(#f75c0311, transparent);
+  //   position: absolute;
+  //   z-index: -10;
+  //   box-shadow: 0px 0px 100px 260px #f75c0306;
+  //   filter: drop-shadow(0px 0px 140px #f75c03);
+  // }
 }
