feat: login and register page

--- a/src/components/CommetSlider/commetslider.scss
+++ b/src/components/CommetSlider/commetslider.scss
@@ -131,6 +131,7 @@
   .slick-dots {
     display: inline-flex !important;
     width: auto;
+    height: max-content;
     top: -80px;
     left: 0;
 
