--- a/src/components/FoodSlider/foodslider.scss
+++ b/src/components/FoodSlider/foodslider.scss
@@ -1,6 +1,15 @@
 .food__silder {
   text-align: center;
   position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: #f75c03;
+    opacity: 0.1;
+    z-index: -1;
+    filter: blur(138px);
+  }
   & > h1 {
     margin-bottom: 8px;
   }
