fixed: navbar profile link

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -205,6 +205,9 @@
           &::after {
             display: none;
           }
+          &:active {
+            background: #f75c03;
+          }
         }
       }
     }
