--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,9 @@ body {
   font-family: "Inter", sans-serif;
   background: #f7f7f7;
 }
+#root {
+  overflow: hidden;
+}
 a {
   background-color: transparent;
   text-decoration: none;
