--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -15,7 +15,9 @@
       left: -40px;
       margin-bottom: 20px;
       & > img {
-        min-width: 240px;
+        max-width: 210px;
+        height: auto;
+        object-fit: cover;
       }
     }
     & > a {
