--- a/src/pages/Register/register.scss
+++ b/src/pages/Register/register.scss
@@ -22,7 +22,9 @@
       left: -40px;
       margin-bottom: 20px;
       & > img {
-        min-width: 240px;
+        max-width: 210px;
+        height: auto;
+        object-fit: cover;
       }
     }
     & .contact__form {
