--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -11,7 +11,7 @@
     cursor: pointer;
     margin-bottom: 25px;
     & > img {
-      min-width: 240px;
+      max-width: 210px;
     }
   }
   & p {
