--- a/src/components/HamburgerButton/hmbutton.scss
+++ b/src/components/HamburgerButton/hmbutton.scss
@@ -38,7 +38,14 @@
     transform: translateY(-100%);
   }
 }
-
+@media screen and (max-width: 600px) {
+  .burger {
+    scale: 0.7;
+    & span {
+      height: 3px;
+    }
+  }
+}
 .burger input:checked ~ span:nth-of-type(1) {
   transform: rotate(45deg);
   top: 0px;
