--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -14,6 +14,9 @@
   &:hover {
     background: #d64f00;
   }
+  &:active {
+    background: #c24801;
+  }
 }
 .slick-prev {
   background: #172a140c;
@@ -22,6 +25,9 @@
   }
   &:hover {
     background: #192e1649;
+  }
+  &:active {
+    background: #142b167a;
   }
 }
 .slick-next::before {
