--- a/src/pages/Category/category.scss
+++ b/src/pages/Category/category.scss
@@ -5,12 +5,12 @@
   & .category-itmes {
     display: flex;
     flex-direction: column;
-    align-items: center;
+
     gap: 80px;
-    & > div {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
+    & > .category-itmes__wrapper {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+      justify-items: center;
       row-gap: 100px;
     }
     & .paginate {
@@ -19,6 +19,7 @@
       max-width: 150px;
       width: 100%;
       position: relative;
+      align-self: center;
       & li {
         width: 30px;
         height: 30px;
@@ -77,7 +78,7 @@
     }
   }
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1090px) {
   .category__pages {
     & > h1,
     p {
