--- a/src/components/CartModal/cartmodal.scss
+++ b/src/components/CartModal/cartmodal.scss
@@ -15,14 +15,11 @@
     right: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     gap: 80px;
     max-width: 600px;
     width: 70%;
     z-index: 9999;
-    background-color: white;
-    color: black;
+    background-color: #fff;
 
     & h1 {
       font-weight: 600;
