--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -257,7 +257,7 @@
   .header {
     margin-top: 86px;
     & > div .logo {
-      left: -60px;
+      left: -40px;
       transform: scale(0.8);
     }
     & .profile {
@@ -323,6 +323,7 @@
 }
 @media screen and (max-width: 455px) {
   .header > div {
+    justify-content: center;
     & .logo {
       left: -40px;
       width: 50%;
@@ -331,7 +332,7 @@
       }
     }
     & .profile {
-      column-gap: 5px;
+      column-gap: 15px;
       justify-content: flex-end;
     }
   }
