--- a/src/index.scss
+++ b/src/index.scss
@@ -43,3 +43,25 @@ select:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
   box-shadow: inset 0 0 20px 20px #ffffff;
 }
+[type="date"] {
+  background: transparent url("../public/calendar.svg") 97% 50% no-repeat !important;
+}
+[type="date"]::-webkit-inner-spin-button {
+  display: none;
+}
+[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  flex-basis: 75%;
+}
+
+[type="time"] {
+  background: transparent url("../public/clock.svg") 97% 50% no-repeat !important;
+}
+
+[type="time"]::-webkit-inner-spin-button {
+  display: none;
+}
+[type="time"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  flex-basis: 75%;
+}
