--- a/src/components/Cart/cart.scss
+++ b/src/components/Cart/cart.scss
@@ -70,15 +70,66 @@
       color: #f75c03;
       font-size: 24px;
       font-weight: 500;
-      margin-bottom: 50px;
+      margin-bottom: 30px;
+    }
+    & h5 {
+      color: #f75c03;
+      font-size: 16px;
+      font-weight: 500;
+      margin-top: 15px;
+    }
+    & li {
+      display: flex;
+      justify-content: space-between;
+      padding: 20px 0;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+      & span {
+        color: #202020;
+        font-size: 16px;
+        font-weight: 500;
+      }
+      & svg {
+        cursor: pointer;
+        opacity: 0.7;
+        transition: all 0.2s;
+        &:hover {
+          opacity: 1;
+        }
+        &:active {
+          opacity: 0.7;
+        }
+      }
+    }
+    & > p {
+      text-align: center;
+      padding: 20px 0;
+      color: #f75c03;
+      font-size: 16px;
     }
     & .cart-day__button {
+      display: block;
+      width: 100%;
+      display: grid;
+      place-items: center;
       border: none;
       outline: none;
       background: #f75c03;
       color: #fff;
+      border-radius: 16px;
+      padding-block: 12px;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.2s;
+      box-shadow: 0px 8px 23px 0px rgba(14, 107, 168, 0.11);
       &:disabled {
         opacity: 0.5;
+      }
+      &:hover {
+        background: #da5000;
+      }
+      &:active {
+        background: #f75c03;
       }
     }
   }
