--- a/src/components/CartModal/cartmodal.scss
+++ b/src/components/CartModal/cartmodal.scss
@@ -26,7 +26,7 @@
     }
   }
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 633px) {
   .backdrop-cart {
     & .cart-modal {
       width: 90%;
@@ -37,6 +37,22 @@
       top: 13px;
       right: 23px;
       scale: 0.8;
+    }
+  }
+}
+@media screen and (max-width: 450px) {
+  .backdrop-cart {
+    & .cart-modal .cart-day__orderday {
+      padding: 16px 12px 16px 33px;
+      font-size: 12px;
+      font-weight: 400;
+      &::after {
+        position: absolute;
+        left: 10px;
+        scale: 0.8;
+        top: 50%;
+        transform: translateY(-50%);
+      }
     }
   }
 }
