--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -53,15 +53,20 @@
   .footer {
     & > div {
       padding: 30px 0px;
-      & .footer__log {
-        margin-bottom: 15px;
+      & .footer__logo {
+        margin-bottom: 0px;
       }
       & > p {
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+        font-size: 14px;
+        line-height: 18px;
       }
       & .footer__nav {
         gap: 30px;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+        & li a {
+          font-size: 14px;
+        }
       }
     }
   }
@@ -70,16 +75,21 @@
   .footer {
     & > div {
       padding: 15px 0px;
-      & .footer__log {
-        margin-bottom: 10px;
+      & .footer__logo {
+        margin-bottom: 0px;
         transform: scale(0.8);
       }
       & > p {
-        margin-bottom: 20px;
+        margin-bottom: 10px;
+        font-size: 12px;
+        line-height: 15px;
       }
       & .footer__nav {
-        gap: 20px;
-        margin-bottom: 20px;
+        gap: 10px;
+        margin-bottom: 10px;
+        & li a {
+          font-size: 12px;
+        }
       }
     }
   }
