fixed: profile tab information

--- a/src/components/CartModal/cartmodal.scss
+++ b/src/components/CartModal/cartmodal.scss
@@ -13,6 +13,7 @@
     right: 0;
     max-width: 600px;
     width: 70%;
+    overflow-y: scroll;
     z-index: 9999;
     padding-block: 50px;
     padding-inline: 20px;
