--- a/src/pages/Profile/profile.scss
+++ b/src/pages/Profile/profile.scss
@@ -77,7 +77,7 @@
     }
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1000px) {
   .profile__pages {
     & > h1 {
       margin-bottom: 20px;
@@ -117,6 +117,7 @@
       }
       & .profile__pages__content {
         width: 100%;
+        padding: 20px 10px;
       }
     }
   }
