--- a/src/pages/Register/register.scss
+++ b/src/pages/Register/register.scss
@@ -45,6 +45,19 @@
         }
       }
     }
+    & .login__register {
+      margin-top: 30px;
+      color: #00072d;
+      text-align: center;
+      font-size: 14px;
+      font-weight: 400;
+      & a {
+        color: #f75c03;
+        font-weight: 700;
+        letter-spacing: 0.14px;
+        text-decoration-line: underline;
+      }
+    }
   }
 }
 @media screen and (max-width: 800px) {
