--- a/src/components/Cart/cart.scss
+++ b/src/components/Cart/cart.scss
@@ -64,7 +64,7 @@
   & .cart-day__product {
     border-radius: 10px;
     background: #fff;
-    padding-block: 25px 55px;
+    padding-block: 25px;
     padding-inline: 18px;
     & h3 {
       color: #f75c03;
