--- a/src/components/AboutMain/aboutmain.scss
+++ b/src/components/AboutMain/aboutmain.scss
@@ -52,3 +52,31 @@
     }
   }
 }
+@media screen and (max-width: 550px) {
+  .about-main {
+    & > h1 {
+      margin-bottom: 10px;
+    }
+    & > p {
+      margin-bottom: 15px;
+      line-height: 20px;
+    }
+    & .about-main__images {
+      margin-bottom: 15px;
+    }
+    & .about-main__content {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      gap: 10px;
+      & h1 {
+        font-size: 20px;
+        margin-bottom: 5px;
+      }
+      & p {
+        font-size: 12px;
+        line-height: 130%;
+      }
+    }
+  }
+}
