--- a/src/components/Accordiong/accordiong.scss
+++ b/src/components/Accordiong/accordiong.scss
@@ -60,3 +60,25 @@
 .itemBtnExpanded .chevron {
   transform: rotate(45deg) scale(1.05);
 }
+@media screen and (max-width: 600px) {
+  .itemBtn {
+    padding: 20px 0px;
+    transition: padding 0.3s;
+    font-weight: 500;
+    font-size: 16px;
+  }
+  .itemPanel {
+    padding-bottom: 18px;
+
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 20px;
+    max-width: 90%;
+  }
+  .chevron {
+    scale: 0.8;
+    &:hover {
+      transform: scale(0.9);
+    }
+  }
+}
