--- a/src/components/HomePageComp/HomeTitle/hometitle.scss
+++ b/src/components/HomePageComp/HomeTitle/hometitle.scss
@@ -47,6 +47,7 @@
 @media screen and (max-width: 1060px) {
   .Home-title {
     flex-direction: column;
+    gap: 20px;
     text-align: center;
     & br {
       display: none;
