--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -57,12 +57,25 @@
 }
 @media screen and (max-width: 900px) {
   .slick-next {
-    right: 0;
+    right: 10%;
     top: 30%;
   }
   .slick-prev {
-    left: 0;
+    left: 10%;
     top: 30%;
     z-index: 1;
+  }
+}
+@media screen and (max-width: 550px) {
+  .slick-next {
+    right: 0;
+    top: 38%;
+    scale: 0.8;
+  }
+  .slick-prev {
+    left: 0;
+    top: 38%;
+    z-index: 1;
+    scale: 0.8;
   }
 }
