--- a/src/pages/Payment/payment.scss
+++ b/src/pages/Payment/payment.scss
@@ -1,10 +1,11 @@
 .payment__page {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
   & .payment__wrapper__container {
     width: min(100% - 2.25rem, 620px);
     margin-inline: auto;
   }
-  display: grid;
-  grid-template-columns: 1fr 1fr;
 
   & .payment__content {
     padding: 27px 0;
@@ -218,6 +219,70 @@
               }
             }
           }
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 600px) {
+  .payment__page {
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 100vh;
+
+    & .payment__wrapper__container {
+      width: min(100% - 2.25rem, 620px);
+      margin-inline: auto;
+      & .payment__content {
+        & .payment__content__img {
+          margin-bottom: 0;
+          left: 0;
+        }
+        & .payment__content__category {
+          margin-bottom: 15px;
+          font-size: 14px;
+          padding: 10px 0;
+        }
+        & .payment__content__datepicker {
+          & > label {
+            display: block;
+            text-align: center;
+            color: #d3d3d3;
+          }
+          & > p {
+            color: #343c44;
+            background-color: #fff;
+          }
+          & > span {
+            color: #d3d3d3;
+            margin-top: 5px;
+          }
+        }
+        & > p {
+          padding-bottom: 10px;
+        }
+        & > button {
+          margin-bottom: 10px;
+        }
+        align-items: center;
+        & > h1 {
+          margin-bottom: 0px;
+        }
+        & > p {
+          color: #d3d3d3;
+          margin-bottom: 6px;
+          & a {
+            color: #ff5f02;
+          }
+        }
+        & > span {
+          color: #d3d3d3;
+          font-weight: 500;
+        }
+        & > a {
+          padding: 10px 0;
+          font-size: 14px;
+          font-weight: 600;
         }
       }
     }
