fixed:licance warning,contact page responsivlik

--- a/src/pages/Contact/contact.scss
+++ b/src/pages/Contact/contact.scss
@@ -103,6 +103,7 @@
           resize: none;
           margin-top: 16px;
           font-size: 20px;
+          transition: all 0.2s;
           &:focus,
           &:hover,
           &:active {
@@ -114,6 +115,9 @@
             caret-color: #fa3e3e;
           }
         }
+      }
+      & > button {
+        margin-top: 50px;
       }
     }
   }
@@ -212,6 +216,11 @@
           margin-top: 12px;
           font-size: 16px;
         }
+      }
+      & > button {
+        margin-top: 20px;
+        padding: 10px 0;
+        font-size: 14px;
       }
     }
     .contact__info {
