--- a/src/components/HomePageComp/HomeTitle/hometitle.scss
+++ b/src/components/HomePageComp/HomeTitle/hometitle.scss
@@ -26,26 +26,26 @@
       width: 500px;
       height: auto;
     }
-    & img:last-child {
+    // & img:last-child {
+    //   position: absolute;
+    //   max-width: 100%;
+    //   width: 360px;
+    //   display: block;
+    //   z-index: -1;
+    // }
+    &::after {
+      content: "";
       position: absolute;
-      max-width: 100%;
-      width: 360px;
-      display: block;
-      z-index: -1;
-    }
-    //   &::after {
-    //   //   content: "";
-    //   //   position: absolute;
 
-    //   //   left: 0;
-    //   //   top: 165px;
-    //   //   width: 100%;
-    //   //   height: 100%;
-    //   //   background: #f75c03;
-    //   //   opacity: 0.2;
-    //   //   z-index: -1;
-    //   //   filter: blur(138px);
-    //   // }
+      left: 0;
+      top: 165px;
+      width: 100%;
+      height: 100%;
+      background: #f75c03;
+      opacity: 0.2;
+      z-index: -1;
+      filter: blur(138px);
+    }
   }
 }
 @media screen and (max-width: 1184px) {
