feat:i18n language change

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -34,6 +34,7 @@
       font-size: 18px;
       transition: color 0.2s;
       position: relative;
+      text-transform: capitalize;
       white-space: nowrap;
       transition: all 0.25s;
       &:hover {
