--- a/src/pages/Payment/payment.scss
+++ b/src/pages/Payment/payment.scss
@@ -228,7 +228,7 @@
   .payment__page {
     display: grid;
     grid-template-columns: 1fr;
-    height: 100vh;
+    height: 100dvh;
 
     & .payment__wrapper__container {
       width: min(100% - 2.25rem, 620px);
