--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -258,9 +258,11 @@
 }
 @media screen and (max-width: 880px) {
   .header {
-    margin-top: 86px;
+    margin-top: 0px;
+    height: 100px;
     & > div .logo {
       left: -40px;
+      top: 0;
       transform: scale(0.8);
     }
     & .profile {
@@ -288,7 +290,7 @@
       }
     }
     & .navbar {
-      bottom: -186px;
+      bottom: -215px;
       & .mobile-profile {
         display: flex;
         gap: 10px;
@@ -326,7 +328,7 @@
 }
 @media screen and (max-width: 455px) {
   .header > div {
-    justify-content: center;
+    justify-content: space-between;
     & .logo {
       left: -40px;
       width: 50%;
