--- a/src/components/HomePageComp/HomeTitle/hometitle.scss
+++ b/src/components/HomePageComp/HomeTitle/hometitle.scss
@@ -48,15 +48,7 @@
     }
   }
 }
-@media screen and (max-width: 1184px) {
-  .Home-title {
-    & > div {
-      & h1 {
-        font-size: 35px;
-      }
-    }
-  }
-}
+
 @media screen and (max-width: 1060px) {
   .Home-title {
     flex-direction: column;
@@ -70,12 +62,13 @@
       justify-content: center;
       align-items: center;
       & p {
-        margin-bottom: 16px;
+        margin-bottom: 12px;
       }
     }
     & > div {
       & h1 {
-        font-size: 35px;
+        // font-size: 35px;
+        line-height: 35px;
       }
     }
   }
