--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,9 @@ body {
 }
 #root {
   overflow: hidden;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 a {
   background-color: transparent;
