--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -6,7 +6,7 @@
   background-color: #f7f7f7;
   width: 100%;
   margin-top: 52px;
-  height: 136px;
+  height: 100px;
   align-items: center;
   transition: all 0.3s;
 
@@ -14,7 +14,7 @@
   &.scrollshadow {
     background-color: rgba(255, 255, 255, 0.35);
     backdrop-filter: blur(20px);
-    box-shadow: 3px 6px 16px rgba(247, 92, 3, 0.06);
+    box-shadow: 3px 6px 16px rgba(247, 92, 3, 0.1);
     margin-top: 0px;
   }
   & > div {
@@ -24,13 +24,14 @@
     height: 100%;
     & .logo {
       cursor: pointer;
-      position: relative;
-      top: -4px;
-      left: -40px;
+     
+     
       & > img {
-        max-width: 210px;
+        
         height: auto;
-        object-fit: cover;
+        object-fit: contain;
+        width: 150px;
+        aspect-ratio: 16/9;
       }
     }
     & .profile {
@@ -206,10 +207,7 @@
     &:hover {
       color: #f75c03;
     }
-    &:hover:after {
-      width: 100%;
-      left: 0%;
-    }
+  
   }
 }
 @media screen and (max-width: 1200px) {
