--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -14,6 +14,7 @@
   &.scrollshadow {
     background-color: rgba(255, 255, 255, 0.35);
     backdrop-filter: blur(20px);
+     -webkit-backdrop-filter: blur(20px);
     box-shadow: 3px 6px 16px rgba(247, 92, 3, 0.1);
     margin-top: 0px;
   }
